
message WhisperMessage {
  optional bytes  ephemeralKey    = 1;
  optional uint32 counter         = 2;
  optional uint32 previousCounter = 3;
  optional bytes  ciphertext      = 4;
}

message PreKeyWhisperMessage {
  optional uint32 registrationId = 5;
  optional uint32 preKeyId    = 1;
  optional bytes  baseKey     = 2;
  optional bytes  identityKey = 3;
  optional bytes  message     = 4; // WhisperMessage
}
